done with home-page and about page

--- a/education.html
+++ b/education.html
@@ -18,15 +18,8 @@
           <li><a href="">Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-    <h1 style="text-align: center;">My Interesting childhood life🤗🤗🤗</h1>
-    <div class="body-text">
-    <p>I was born in the great Kakamega city in a small village called Ekabala. This is where the Heros are born✨</p>
-    <p>My childhood was filled with a lot sweet memories. The small ekavala village I had a lot of friends whom I spent time with whenever.</p>
-    <p>I used to play football with my friends and I was a very good player. I was the best striker in my village and I was the best player in my school. Lol I am not bragging 😂😂this is just a fact.</p>
-    <P>I was very active kid, never was I left behind when it come to playing with my friends.</P>
-    <p>I had a very strong football team, our village had a lot of boys. We could organize for tournaments where we enjoyed playing the ball we created by assembling used nylon papers. This was our best🙌.</p>
-
-</div>
+    </nav>
+    
     <div class="footer" style="display: fixed; bottom: 0;">
         <hr width="100%">
     <footer class="social">
