CI and CD process

--- a/education.html
+++ b/education.html
@@ -19,6 +19,11 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+    <div>
+        <h1 class="edh1">Education Background</h1>
+    </div>
+    <P id="pic"><img src="photos/edubg.jpeg" ></P>
+    
     
     <div class="footer" style="display: fixed; bottom: 0;">
         <hr width="100%">
