done with the project work, add form validation checks for contact us page and linked all the forms

--- a/education.html
+++ b/education.html
@@ -1,39 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-</head>
-<body>
+  </head>
+  <body>
     <nav class="nav1">
-        <ul>
-          <li><a href="homepage.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
+      <ul>
+        <li><a href="homepage.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
     <div>
-        <h1 class="edh1">Education Background</h1>
+      <h1 class="edh1">Education Background</h1>
     </div>
-    <P id="pic"><img src="photos/edubg.jpeg" ></P>
-    
-    
-    <div class="footer" style="display: fixed; bottom: 0;">
-        <hr width="100%">
-    <footer class="social">
+    <div id="flex-content-ed1">
+      <div class="left">
+        <p id="pic"><img src="photos/edubg.jpeg" /></p>
+      </div>
+      <div class="right">
+        <h3>Bachelors Degree of Science in Infomation Technology</h3>
+        <ul>
+          <p>Year : 2022 to date</p>
+          <p>Intitution:<b> Zetech University, Kenya</b></p>
+        </ul>
+        <h3>Kenya Certificate of Secondary Education</h3>
+        <ul>
+          <p>Year : 2018 - 2022</p>
+          <p>School:<b> St.Peter's Mumias Boys High School</b></p>
+          <p>Grade: B plain</p>
+        </ul>
+
+        <h3>Kenya Certificate of Primary Education</h3>
+        <ul>
+          <p>Year: 2008 - 2017</p>
+          <p>School: <b>Eshiandukusasi </b>Primary School</p>
+          <p>Grade: 363/500</p>
+        </ul>
+      </div>
+    </div>
+
+    <div class="footer" style="display: fixed; bottom: 0">
+      <hr width="100%" />
+      <footer class="social">
         <h2>Connect with Me</h2>
-        <a href="https://www.linkedin.com/in/david-nanjila-523232277/" class="fa fa-linkedin"></a>
+        <a
+          href="https://www.linkedin.com/in/david-nanjila-523232277/"
+          class="fa fa-linkedin"
+        ></a>
         <a href="https://github.com/stoicdavi" class="fa fa-github"></a>
         <a href="https://twitter.com/AbisaiDavid1" class="fa fa-twitter"></a>
         <!-- Add more social links as needed -->
-    </footer>
+      </footer>
     </div>
-</body>
+  </body>
 </html>
