--- a/experience.html
+++ b/experience.html
@@ -15,11 +15,38 @@
         <ul>
           <li><a href="homepage.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="">Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    
+    <div>
+        <h4 style="text-align: center;">Hey! welcome Experience is the best teacher✨</h4>
+    </div>
+    <div class="exp-content">
+    <p>I have a good experience in coding</p>
+    <ul>Bellow is a list of programming languages that I am well  knowleable with
+        <li>C programming language</li>
+        <li>C++</li>
+        <li>My SQL using Xamp</li>
+        <li>Java programming language</li><i>Though I don't have any java project</i>
+        <p>I am also good at frontent web development but I am Still working to better my skills<br>
+            Bellow is a list of ehat I am currently using for web development</p>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <p>For more you can check out my <a href="https://github.com/stoicdavi">github </a>and see the projects that I have been able to do so far</p>
+    </ul>
+
+    <p>Apart from programming I am also a trained photographer with experience of more than one Year.</p>
+    <p>I did my training at <a href="https://www.maxtonmedia.com/">Maxton Media Group</a></p>
+    <p>I do not only take photos but I am also a good graphic designer, I have a good experience in using Adobe Photoshop and Adobe Light Room.</p>
+    <p>I have experience in photography, I took part in shooting a wedding early this year. 
+        I could have uploaded the sample pictures here but due to privacy, I am limited</p>
+        <h3>Usage of computer</h3>
+        <P>I very informed when it comes to computer application software, I can use computer with a lof ease.</P>
+        <p>I am very good at using Microsoft office,<ol><li>I can use Microsoft-word for mail meging and creating documents, even formating and editing</li>
+        <li>Microsoft Excel - to peerform mathematical calculations</li><li>Microsoft PowerPoint</li><li> Microsoft Access. - to generate queries and so on</li></ol></p>
+        <p> I just love anything dealing with Tech, I just find tech very Interesting. As a result I have my our facebook group where I teach people basics of computer. You can check it <a href="https://www.facebook.com/groups/132126448785723/?multi_permalinks=560650759266621&notif_id=1682011931950363&notif_t=group_highlights&ref=notif" alt="Facebook group link">here</a></p>
+        </div>
     <div class="footer" style="display: fixed; bottom: 0;">
         <hr width="100%">
     <footer class="social">
@@ -27,7 +54,6 @@
         <a href="https://www.linkedin.com/in/david-nanjila-523232277/" class="fa fa-linkedin"></a>
         <a href="https://github.com/stoicdavi" class="fa fa-github"></a>
         <a href="https://twitter.com/AbisaiDavid1" class="fa fa-twitter"></a>
-        <!-- Add more social links as needed -->
     </footer>
     </div>
 </body>
