added meta tags to the home page and contact as page

--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="description" content="David Nanjila portfolio">
+  <meta name="author" content="Dean_David Nanjila">
+  <meta http-equiv="refresh" content="30">
+  <meta name="keywords" content="David Nanjila, web developer, student , Zetech university.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>David nanjila</title>
     <link rel="stylesheet" href="style.css">
     <link
     rel="stylesheet"
