--- a/homepage.html
+++ b/homepage.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Primary Meta Tags -->
+<title>Abisai David</title>
+<meta name="title" content="Abisai David" />
+<meta name="description" content="This is a portfolio about Nanjila David, get to learn more about david" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://metatags.io/" />
+<meta property="og:title" content="Abisai David" />
+<meta property="og:description" content="This is a portfolio about Nanjila David, get to learn more about david" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://metatags.io/" />
+<meta property="twitter:title" content="Abisai David" />
+<meta property="twitter:description" content="This is a portfolio about Nanjila David, get to learn more about david" />
+<meta property="twitter:image" content="photos\meta-tags.jpeg" />
+<meta http-equiv="refresh" content="30">
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>David Nanjila</title>
+    
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
