updates done on metatags

--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 <meta property="og:url" content="https://metatags.io/" />
 <meta property="og:title" content="Abisai David" />
 <meta property="og:description" content="This is a portfolio about Nanjila David, get to learn more about david" />
-<meta property="og:image" content="httmeta-tags.png" />
+<meta property="og:image" content="photos\meta-tags.jpeg" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
