fixed the home navigation button

--- a/education.html
+++ b/education.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="nav1">
       <ul>
-        <li><a href="homepage.html">Home</a></li>
+        <li><a href="Index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
