--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="nav1">
         <ul>
-          <li><a href="homepage.html">Home</a></li>
+          <li><a href="Index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
