--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         <h1>David</h1>
         <nav class="nav1">
           <ul>
-            <li><a href="Index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
