--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <hr>
     <footer class="social">
         <h2>Connect with Me</h2>
-        <a href="https://www.linkedin.com/in/david-nanjila-523232277/" class="fa fa-linkedin"></a>
+        <a href="https://www.linkedin.com/in/david-nanjila" class="fa fa-linkedin"></a>
         <a href="https://github.com/stoicdavi" class="fa fa-github"></a>
         <a href="https://twitter.com/AbisaiDavid1" class="fa fa-twitter"></a>
         <!-- Add more social links as needed -->
