--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="flex-content2">
         <nav>
           <ul>
-            <li><a href="Index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contacts</a></li>
             
