--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                 <option value="africa">Africa</option>
               </select>
               <label for="subject">Subject</label>
-              <textarea id="message" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+              <textarea id="message" name="subject" placeholder="Note that you can only send me an email using the link in the footer" style="height:170px"></textarea>
               <input type="submit" value="Submit">
             </form>
           </div>
